--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nxus-cfgblder",
+  "name": "nxus-cfger",
   "version": "1.0.0",
   "description": "A Project wherein I help Automate some Nexus CLI Configs (probably something better out there using Ansible)",
   "main": "cfger.js",
